fix copyright align

--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -426,7 +426,8 @@ footer#footer {
   }
 
   #copyright {
-    height: 100px;
+    display: block;
+    height: 100%;
     font-family: 'Raleway', sans-serif;
     font-weight: 400;
     font-size: 16px;
